Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46666

WINCE: Transparent png broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.4.1
    • Image formats
    • None
    • Windows Embedded Compact 7, Qt 5.4.1 release build

    Description

      When trying to show a png with transparency it is scrambled. See attached screenshot. Also attached code. Happens both for QML and Widgets seems to be somewhere in the core. Does only happen with release build.

      Attachments

        1. CEZoom0.png
          CEZoom0.png
          14 kB
        2. qmltest.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aholza Andreas Holzammer
            aholza Andreas Holzammer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes