src/gui/image/qimage_p.h
@@ -116,7 +116,7 @@ void qInitImageConversions();
 const uchar *qt_get_bitflip_array();
 Q_GUI_EXPORT void qGamma_correct_back_to_linear_cs(QImage *image);
 
-#if defined(Q_OS_WINRT) && defined(_M_ARM) // QTBUG-42038
+#if defined(_M_ARM) // QTBUG-42038
 #pragma optimize("", off)
 #endif
 inline int qt_depthForFormat(QImage::Format format)
@@ -163,7 +163,7 @@ inline int qt_depthForFormat(QImage::Format format)
     }
     return depth;
 }
-#if defined(Q_OS_WINRT) && defined(_M_ARM)
+#if defined(_M_ARM)
 #pragma optimize("", on)
 #endif
 
